Fixed the vertical positioning of the gifs on smaller screens

--- a/static/css/search.css
+++ b/static/css/search.css
@@ -204,5 +204,5 @@ body {
     justify-content: space-between;
     position: relative;
     z-index: 50;
-    margin-top: -40%;
+    margin-top: -400px;
 }
